# mmux-cc-types

./: .gitignore  Makefile.am  NEWS  README  README.md  TODO  acinclude.m4  configure.ac  configure.sh
doc/: ALL-STEMS.txt  aliased-types.texi.in  macros.texi  mmux-bash-pointers.texi  mmux-cc-types.style.css  mmux-cc-types.texi
meta/autoconf/: mmux-bash-extensions-macros.m4  mmux-bash-extensions.m4  mmux.m4
meta/m4/: libmmux-bash-builtins.bash.m4  libmmux-bash-builtins.m4
meta/scripts/: mmux-bash-pointers.pc.in  mmux-cc-types.pc.in  print-builtin-names.bash
meta/slackware/: slack-desc.in
mmux-cc-libc/: Makefile.am  README  TODO  configure.ac
mmux-cc-libc/doc/: mmux-cc-libc.texi
mmux-cc-libc/meta/autoconf/: mmux-ax.m4  mmux.m4
mmux-cc-libc/meta/scripts/: mmux-cc-libc.pc.in
mmux-cc-libc/meta/slackware/: slack-desc.in
mmux-cc-libc/mmux-cc-types/: configure.sh
mmux-cc-libc/mmux-cc-types/doc/: macros.texi  mmux-cc-types.texi  mmux-version.texi.in
mmux-cc-libc/mmux-cc-types/meta/autoconf/: mmux.m4
mmux-cc-libc/mmux-cc-types/src/: mmux-cc-types-parsers.c.m4  mmux-cc-types-sprinters.c.m4  mmux-cc-types.h.m4
mmux-cc-libc/mmux-cc-types/src/m4/: macros-for-cc.m4
mmux-cc-libc/src/: mmux-cc-libc-characters.c.m4  mmux-cc-libc-config.h.in  mmux-cc-libc-constants.h.m4  mmux-cc-libc-core.c.m4  mmux-cc-libc-errors.c.m4  mmux-cc-libc-file-descriptors.c.m4  mmux-cc-libc-file-system.c.m4  mmux-cc-libc-functions.h.m4  mmux-cc-libc-internals.h.m4  mmux-cc-libc-memory.c.m4  mmux-cc-libc-persona.c.m4  mmux-cc-libc-processes.c.m4  mmux-cc-libc-sockets.c.m4  mmux-cc-libc-strings.c.m4  mmux-cc-libc-system-configuration.c.m4  mmux-cc-libc-time.c.m4  mmux-cc-libc.h.m4
mmux-cc-libc/src/m4/: macros-for-cc.m4  mmux-cc-libc-config.m4.in
mmux-cc-libc/tests/: version.c
mmux-cc-types/: Makefile.am  NEWS  README  acinclude.m4  configure.ac
mmux-cc-types/doc/: mmux-cc-types.texi  version.texi
mmux-cc-types/meta/autoconf/: mmux.m4
mmux-cc-types/meta/autotools/: README
mmux-cc-types/meta/scripts/: mmux-cc-types.pc.in
mmux-cc-types/src/: mmux-cc-types-core.c.m4  mmux-cc-types-internals.h.m4  mmux-cc-types-libdfp.c.m4  mmux-cc-types-parsers.c.m4  mmux-cc-types-sprinters.c.m4  mmux-cc-types.h.m4
mmux-cc-types/src/emacs/: mmux-cc-types.el
mmux-cc-types/src/m4/: macros-for-cc.m4  mmux-cc-types-config.m4.in
src/: config.m4.in  libmmux-bash-packages.bash.m4  libmmux-bash-pointers.bash.in  libmmux-bash-pointers.bash.m4  mmux-bash-pointers-accessors.c.m4  mmux-bash-pointers-arithmetics.c.m4  mmux-bash-pointers-arrays.c.m4  mmux-bash-pointers-bash.c.m4  mmux-bash-pointers-bind-functions.c.m4  mmux-bash-pointers-bitwise.c.m4  mmux-bash-pointers-characters.c.m4  mmux-bash-pointers-comparison.c.m4  mmux-bash-pointers-complex-builtins.c.m4  mmux-bash-pointers-config.h.in  mmux-bash-pointers-config.m4.in  mmux-bash-pointers-errors.c.m4  mmux-bash-pointers-fds.c.m4  mmux-bash-pointers-file-descriptors.c.m4  mmux-bash-pointers-file-system.c.m4  mmux-bash-pointers-internals.h  mmux-bash-pointers-internals.h.m4  mmux-bash-pointers-libdfp.c.m4  mmux-bash-pointers-library.c  mmux-bash-pointers-library.c.m4  mmux-bash-pointers-mathematics.c.m4  mmux-bash-pointers-memory.c.m4  mmux-bash-pointers-misc-builtins.c.m4  mmux-bash-pointers-mutators.c.m4  mmux-bash-pointers-parser-functions.c.m4  mmux-bash-pointers-parsers.c.m4  mmux-bash-pointers-parsers.c.m4.in  mmux-bash-pointers-persona.c.m4  mmux-bash-pointers-predicates.c.m4  mmux-bash-pointers-processes.c.m4  mmux-bash-pointers-sockets.c.m4  mmux-bash-pointers-sprint-functions.c.m4  mmux-bash-pointers-sprinters.c.m4  mmux-bash-pointers-sprinters.c.m4.in  mmux-bash-pointers-strings.c.m4  mmux-bash-pointers-system.c.m4  (+65 more)
src/emacs/: mmux-bash-packages.el  mmux-bash-pointers.el  mmux-cc-types-lists-of-symbols.el  mmux-cc-types.el
src/m4/: config.m4.in  macros-for-bash.m4  macros-for-cc.m4  mmux-bash-pointers-config.m4.in  mmux-cc-types-config.m4.in
tests/: accessors-mutators.test.m4  arithmetics.test.m4  arrays.test.m4  bitwise.test.m4  characters.test.m4  comparison.test.m4  complex.test.m4  conversion.test.m4  errors.test.m4  file-descriptors.test.m4  file-system.test.m4  mathematics.test.m4  memory.test.m4  output-formats.test.m4  packages.test.m4  persona.test.m4  pointers.test.m4  predicates.test.m4  sockets.test.m4  strings.test.m4  structs.test.m4  test-arithmetics.bash.m4  test-arithmetics.c  test-arrays.bash.m4  test-bitwise.bash.m4  test-bitwise.c  test-characters.bash.m4  test-common.h  test-comparison.bash.m4  test-comparison.c  test-complex-numbers.c  test-complex.bash.m4  test-complex.c  test-constants.c  test-conversion.bash.m4  test-demo.c  test-documentation.c  test-errors.bash.m4  test-experiments.c  test-file-descriptors.bash.m4  (+26 more)
